--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,8 @@ rootProject.name = 'event-listener-demo'
 include 'stock'
 include 'account'
 include 'outbound'
-include 'account-event-listener'
-include 'outbound-event-listener'
-include 'stock-event-listener'
+include 'account-client'
+include 'outbound-client'
+include 'stock-client'
 include 'all'
 include 'core'
